Finish index action and page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,12 @@
-<h2>hello world! 這是 index</h2>
+<a href="/todos/new">Create</a>
+
+<ul>
+  {{#each todos}}
+  <li>
+    {{{this.name}}}
+    <a href="#">detail</a>
+    <a href="#">edit</a>
+    <button type="submit">delete</button>
+  </li>
+  {{/each}}
+</ul>
